--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -827,7 +827,7 @@ header.sticky-top {
 .nav-menu {
   display: flex;
   background-color: #e5e5e5;
-  border-top: 7px solid;
+  border-top: 5px solid;
   width: 100%;
 }
 
@@ -854,6 +854,7 @@ header.sticky-top {
   align-items: center;
   align-content: center;
   padding: 0 4px;
+  height: 64px;
 }
 
 .nav-menu li a {
@@ -863,6 +864,7 @@ header.sticky-top {
   padding: 0;
   height: auto;
   font-size: 14px;
+  line-height: 17px;
   cursor: pointer;
 }
 
@@ -877,13 +879,6 @@ header.sticky-top {
   font-size: 13px;
   line-height: normal;
   margin: 0;
-}
-
-@media (max-height: 768px) {
-  .nav-menu li a {
-    padding: 9px 2px;
-    font-size: 13px;
-  }
 }
 
 .nav-menu li:first-child {
@@ -909,18 +904,12 @@ header.sticky-top {
 .nav-menu li:first-child a {
   background: #202733;
   padding: 2px 8px;
-}
-
-@media (max-height: 768px) {
-  .nav-menu li:first-child a {
-    height: 70px;
-    padding: 6px;
-  }
+  height: 64px;  
 }
 
 .nav-menu li:first-child img {
   margin: 0 auto;
-  height: auto;
+  height: 60px;
 }
 
 .nav-menu li img {
@@ -957,12 +946,6 @@ header.sticky-top {
   width: 100%;
 }
 
-@media (max-height: 768px) {
-  .nav-menu .global-search {
-    padding: 6px;
-    width: 320px;
-  }
-}
 
 @media (max-width: 1200px) {
   .nav-menu .global-search {
@@ -996,12 +979,6 @@ header.sticky-top {
   line-height: 12px;
 }
 
-@media (max-height: 768px) {	
-  .notification-new {	
-    top: 5px;	
-  }	
-}
-
 .global-search {
   padding: 0 10px;
   display: flex;
@@ -1016,7 +993,7 @@ header.sticky-top {
   border-radius: 22px;
   border: none;
   background-color: #fff;
-  padding: 0px 10px;
+  padding: 2px 10px;
   border: 1px solid #979797;
 }
 
@@ -1057,7 +1034,6 @@ header.sticky-top {
   border: none;
   width: 20px;
   position: relative;
-  top: 3px;
   margin-right: 8px;
 }
 
