Ranking page Brand angular UI Grid and subgrid-1

--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -143,5 +143,6 @@
                 <div id="gridoverlay"></div>
             </main>
         </div>
+        <div id="grid1" ui-grid="gridOptions" ui-grid-exporter ui-grid-expandable ui-grid-selection ui-grid-pagination class="grid"></div>
     </div>
    
