--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -844,7 +844,7 @@ header.sticky-top {
   }
 }
 
-.nav-menu li {
+.nav-menu > li {
   text-align: center;
   border-right: 1px solid #bcbdc1;
   width: 112px;
@@ -857,7 +857,7 @@ header.sticky-top {
   height: 64px;
 }
 
-.nav-menu li a {
+.nav-menu > li > a {
   position: relative;
   color: #202b39;
   font-weight: 700;
@@ -868,20 +868,20 @@ header.sticky-top {
   cursor: pointer;
 }
 
-.nav-menu li a svg {
+.nav-menu > li > a svg {
   height: 24px;
   display: inline-block;
   margin: 0;
   padding: 0;
 }
 
-.nav-menu li a label {
+.nav-menu > li > a label {
   font-size: 13px;
   line-height: normal;
   margin: 0;
 }
 
-.nav-menu li:first-child {
+.nav-menu > li:first-child {
   width: 100%;
   max-width: 155px;
   background: #202733;
@@ -912,7 +912,7 @@ header.sticky-top {
   height: 60px;
 }
 
-.nav-menu li img {
+.nav-menu > li > img {
   display: block;
   height: 26px;
   margin: 0 auto;
@@ -960,9 +960,6 @@ header.sticky-top {
   }
 }
 
-.nav-menu .dropdown-menu a {
-  padding: 10px 12px;
-}
 
 .notification-new {
   width: 16px;
@@ -1210,11 +1207,6 @@ header.sticky-top {
 
 .black-top-menu .checkbox-filter li .dropdown-menu a {
   color: #202b39;
-}
-
-.black-top-menu .checkbox-filter li .dropdown-menu a.newbuild-link {
-  background: #fff;
-  color: #727272;
 }
 
 .filter-listing {
@@ -3249,10 +3241,6 @@ header.sticky-top {
   border-right: none;
 }
 
-.dropdown-menu a.newbuild-link {
-  background: #fff;
-  color: #727272;
-}
 
 .dropdown-menu .fa-play-circle-o {
   color: #00beff;
@@ -4328,4 +4316,34 @@ header.sticky-top {
   margin-right: 4px;
   position: relative;
   top: -2px;
+}
+
+
+/*common dropdown*/
+.common-dropdown {
+  background: #fff;
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, .5);
+  width: 275px;
+}
+
+.common-dropdown a {
+  padding: 18px 20px;
+  background: #fff;
+  font-size: 14px;
+  color: #004978;
+  border-bottom: 1px solid #b5b0b0!important;
+}
+
+.common-dropdown a.newbuild-link img {
+  width: 22px;
+  position: absolute;
+  right: 22px;
+}
+
+.common-dropdown a:hover {
+  background: #d1d1d1;
+}
+
+.common-dropdown a.whatsnew-visited {
+  background: #e5e5e5;
 }
