--- a/templates/modals/MaxLimitTemplate.html
+++ b/templates/modals/MaxLimitTemplate.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h5 class="modal-title">Add New User</h5>
+    <h5 class="modal-title">Maximum Limit Reached</h5>
     <button type="button" class="close" ng-click="closeModal();">
         <span aria-hidden="true"></span>
     </button>
