Secondary filters added

--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -223,13 +223,13 @@
                         </li>
                         <li>
                             New
-                            <span class="open-filter-popup" data-toggle="modal" data-target="#filter-new">
+                            <span class="open-filter-popup" ng-click="openNewTypeModal();">
                                 All <i class="fa fa-caret-down fa-lg"></i>
                             </span>
                         </li>
                         <li>
                             TNF/URL
-                            <span class="open-filter-popup" data-toggle="modal" data-target="#tnf-url">
+                            <span class="open-filter-popup" ng-click="openRefineModal();">
                                 All <i class="fa fa-caret-down fa-lg"></i>
                             </span>
                         </li>
