Ui for black top menu

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -222,22 +222,24 @@ select::-ms-expand {
 /*button*/
 .btn {	
   display: inline-block;	
-  font-weight: 400;	
-  text-align: center;	
-  white-space: nowrap;	
   vertical-align: middle;	
-  color: #fff;	
   -webkit-user-select: none;	
   -moz-user-select: none;	
   -ms-user-select: none;	
   user-select: none;	
-  border: solid 1px #ccc8cf;	
   height: auto;	
   border: none;	
-  font-size: 16px;	
-  padding: 4px 10px;	
-  line-height: 22px;	
-  border-radius: 4px;	
+  height: 25px;
+  color: #fff;	
+  border: 1px solid #5cccf5;
+  padding: 5px 6px;
+  font-size: 13px;
+  line-height: 13px;
+  border-radius: 4px;
+  margin-bottom: 0;
+  font-weight: 400;	
+  text-align: center;	
+  white-space: nowrap;	
   letter-spacing: 0.6px;	
   transition: color 0.3s ease, background-color 0.3s ease, border-color 0.3s ease;	
   cursor: pointer;	
@@ -952,7 +954,7 @@ header.sticky-top {
   color: #fff;
   background: red;
   position: absolute;
-  top: -4px;
+  top: 0;
   left: 53%;
   border-radius: 20px;
   text-align: center;
@@ -1067,7 +1069,7 @@ header.sticky-top {
   justify-content: space-between;
   background: #202733;
   border-top: 1px solid #5c5c5f;
-  padding: 8px 12px;
+  padding: 2px 12px;
   width: 100%;
 }
 
@@ -1091,13 +1093,14 @@ header.sticky-top {
 
 .black-top-menu .left-menu li {
   color: #fff;
-  margin-right: 15px;
+  margin-right: 12px;
   background: #202b39;
 }
 
 .black-top-menu .left-menu li:first-child {
   margin-right: 48px;
   background: transparent;
+  padding-left: 0;
 }
 
 @media (max-width: 1024px) {
@@ -1130,21 +1133,13 @@ header.sticky-top {
   font-size: 14px;
 }
 
-.black-top-menu .left-menu li a label:before {
-  border: 1px solid #fff;
-}
 
 .black-top-menu .left-menu li.active-alert {
   background: #fff;
+  padding: 2px 8px 2px 6px;
 }
 
 .black-top-menu .left-menu li.active-alert label {
-  color: #202b39;
-}
-
-.black-top-menu .left-menu li.active-alert label:before {
-  background: #fff;
-  border: 1px solid #202b39;
   color: #202b39;
 }
 
@@ -1175,18 +1170,12 @@ header.sticky-top {
   margin-left: 8px;
 }
 
-.black-top-menu .checkbox-filter li a.btn {
-  padding: 6px 12px;
-}
-
 .black-top-menu .checkbox-filter li:nth-child(2) {
-  padding-left: 20px;
   border-left: 1px solid #ccc;
-  margin-left: 20px;
-  padding-right: 20px;
   border-right: 1px solid #ccc;
-  margin-right: 20px;
-  height: 100%;
+  padding: 4px 12px;
+  margin-left: 12px;
+  margin-right: 12px;
   display: flex;
 }
 
@@ -1723,25 +1712,35 @@ header.sticky-top {
   background: #202b39;
 }
 
+.left-menu li.active-alert label:before {
+  border: 1px solid #202b39;
+  color: #202b39;
+  border-radius: 50%;
+  height: 14px;
+  width: 14px;
+  position: relative;
+  background: #fff;
+}
+
+.left-menu li.active-alert label:after {
+  content: '';
+  background: #000;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  position: absolute;
+  left: 4px;
+}
+.left-menu li a label:before {
+  border: 1px solid #fff;
+}
+
 .left-menu li.active-alert a label {
   display: flex;
   align-items: center;
   color: #fff;
   position: relative;
 }
-
-.left-menu li.active-alert a label:before {
-  content: "\f111";
-  font-family: "FontAwesome";
-  font-size: 6px;
-  text-align: center;
-  line-height: 14px;
-  font-weight: 700;
-  border: 1px solid #fff;
-  color: #fff;
-  background: #202b39;
-}
-
 .sidebar {
   position: relative;
 }
@@ -3865,6 +3864,7 @@ header.sticky-top {
 
 .section .right-div .inner-right .login-submit {
   width: 100%;
+  height: 48px;
   border: none;
   font-size: 20px;
   padding: 12px 10px;
@@ -4308,11 +4308,11 @@ header.sticky-top {
 .common-dropdown {
   background: #fff;
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, .5);
-  width: 275px;
+  width: 230px;
 }
 
 .common-dropdown a {
-  padding: 18px 20px;
+  padding: 12px;
   background: #fff;
   font-size: 14px;
   color: #004978;
@@ -4320,9 +4320,9 @@ header.sticky-top {
 }
 
 .common-dropdown a.newbuild-link img {
-  width: 22px;
+  width: 20px;
   position: absolute;
-  right: 22px;
+  right: 15px;
 }
 
 .common-dropdown a:hover {
