--- a/templates/modals/FilterDialog.html
+++ b/templates/modals/FilterDialog.html
@@ -16,7 +16,7 @@
             </select>
         </div>
         <ul class="left-menu">
-            <li ng-repeat="option in options" ng-class="{'active_alert' :  sharedFilter ==  option}">
+            <li ng-repeat="option in options" ng-class="{'active-alert' :  sharedFilter ==  option}">
                 <a href="" ng-click="showSharedFilters(option)">
                     <label>{{option}} Filters</label>
                 </a>
