--- a/templates/modals/ListDialog.html
+++ b/templates/modals/ListDialog.html
@@ -16,7 +16,7 @@
                 </select>
             </div>
             <ul class="left-menu">
-                <li ng-repeat="option in options" ng-class="{'active_alert' :  sharedList ==  option}">
+                <li ng-repeat="option in options" ng-class="{'active-alert' :  sharedList ==  option}">
                     <a href="" ng-click="showSharedLists(option)">
                         <label>{{option}} List</label>
                     </a>
