--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,6 +44,7 @@ body {
   margin: 0;
   padding: 0;
   position: relative;
+  overflow: hidden;
 }
 
 img {
@@ -1097,6 +1098,20 @@ header.sticky-top {
   background: #202b39;
 }
 
+.black-top-menu .left-menu li.active-alert label:before {
+  border: 1px solid #202b39;
+  background: #fff;
+}
+
+.black-top-menu .left-menu li.active-alert label:after {
+  background: #000;
+}
+
+.black-top-menu .left-menu li a label:before {
+  border: 1px solid #fff;
+}
+
+
 .black-top-menu .left-menu li:first-child {
   margin-right: 48px;
   background: transparent;
@@ -1388,10 +1403,6 @@ header.sticky-top {
 .report-tab-section .left-menu li a {
   padding: 0;
   margin: 0;
-}
-
-.report-tab-section .left-menu li a label:before {
-  border: 1px solid #202733;
 }
 
 /*table*/
@@ -1696,10 +1707,11 @@ header.sticky-top {
   content: "";
   display: inline-block;
   vertical-align: middle;
-  width: 15px;
-  height: 15px;
+  border-radius: 50%;
+  height: 14px;
+  width: 14px;
+  position: relative;
   padding: 0;
-  border-radius: 100%;
   margin-right: 0.5em;
   text-align: center;
   font-size: 12px;
@@ -1713,26 +1725,22 @@ header.sticky-top {
 }
 
 .left-menu li.active-alert label:before {
-  border: 1px solid #202b39;
-  color: #202b39;
-  border-radius: 50%;
-  height: 14px;
-  width: 14px;
-  position: relative;
-  background: #fff;
+  border: 1px solid #fff;
+  background: #000;
 }
 
 .left-menu li.active-alert label:after {
   content: '';
-  background: #000;
+  background: #fff;
   width: 6px;
   height: 6px;
   border-radius: 50%;
   position: absolute;
   left: 4px;
 }
+
 .left-menu li a label:before {
-  border: 1px solid #fff;
+  border: 1px solid #000;
 }
 
 .left-menu li.active-alert a label {
@@ -1989,6 +1997,8 @@ header.sticky-top {
   padding-left: 60px;
   transition: 0.5s;
   width: 100%;
+  height: 100vh;
+  overflow-y: auto;
 }
 
 .main .disclaimer-msg {
