--- a/templates/modals/newTypeDialog.html
+++ b/templates/modals/newTypeDialog.html
@@ -7,7 +7,7 @@
 <div class="modal-body">
     <div class="checkbox">
         <input class="checkbox-custom cat_all" type="checkbox" id="New">
-        <label for="New" class="checkbox-custom-label full-filled">
+        <label for="New" class="checkbox-custom-label">
             <span class="v-align-middle">New</span></label>
     </div>
     <div class="d-flex mt-3 mb-4">
